--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,10 @@
               "src/assets"
             ],
             "styles": [
+            
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jquery/dist/jquery.js"]
           },
           "configurations": {
             "production": {
